--- a/quest/src/LandingPage/TopNav/TopNav.module.css
+++ b/quest/src/LandingPage/TopNav/TopNav.module.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --element-spacing: 1.5rem;
 }
 
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: var(--element-spacing);
+    margin: var(--element-spacing);
     width: 100%;
 }
 
